--- a/src/components/PopUp/styles.css
+++ b/src/components/PopUp/styles.css
@@ -64,6 +64,7 @@
     .popup-container {
         width: 90vw;
         height: 100%;
+        background-color: aqua;
     }
 
     .popup-content {
