--- a/src/components/PopUp/styles.css
+++ b/src/components/PopUp/styles.css
@@ -63,7 +63,7 @@
 
     .popup-container {
         width: 90vw;
-        height: 100%;
+        height: 70vh;
         background-color: aqua;
     }
 
