--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -12,8 +12,8 @@
 }
 
 .checkout-form h1{
-    margin-bottom: 50px;
-    font-size: 2rem;
+    margin-bottom: 20px;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
@@ -31,6 +31,7 @@
     border: none;
     padding: 5px;
     margin-top: 10px;
+    border-radius: 8px;
 }
 
 .checkout-input button{
@@ -40,4 +41,20 @@
     margin-top: 10px;
     background-color: brown;
     color: white;
+    border-radius: 8px;
+}
+
+@media only screen and (max-width: 700px) {
+    .checkout-form{
+        margin: 50px auto;
+        margin-bottom: 100px;
+        background-color: rgb(222, 222, 222);
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 50px;
+        border-radius: 15px;
+    }
 }
