--- a/src/components/Product/styles.css
+++ b/src/components/Product/styles.css
@@ -3,6 +3,12 @@
     margin: 25px;
 }
 
+.product-container h2{
+    text-align: left;
+    font-size: 1.2rem;
+    margin-top: 5px;
+}
+
 .product-container h3{
     text-align: left;
     font-size: 1rem;
