--- a/src/components/DashboardMenu/styles.css
+++ b/src/components/DashboardMenu/styles.css
@@ -25,3 +25,9 @@
     margin-bottom: 10px;
     border-radius: 8px;
 }
+
+@media only screen and (max-width: 780px){
+    .dashboard-menu{
+        display: none;
+    }
+}
