--- a/src/components/FormProduct/styles.css
+++ b/src/components/FormProduct/styles.css
@@ -4,6 +4,7 @@
     border: none;
     margin-top: 10px;
     border-radius: 8px;
+    background-color: rgb(239, 239, 239)
 }
 .formproduct-input button{
     background-color: #22B573;
