--- a/src/components/DashboardMenu/styles.css
+++ b/src/components/DashboardMenu/styles.css
@@ -1,4 +1,4 @@
-.dashboard-menu{
+.dashboard-menu {
     width: 20vw;
     height: 100%;
     min-height: 100vh;
@@ -6,19 +6,19 @@
     box-shadow: -1px 0px 15px 5px #00000032;
 }
 
-.dashboard-menu a{ 
+.dashboard-menu a {
     text-decoration: none;
     color: white;
 }
 
-.dashboard-menu h1{
+.dashboard-menu h1 {
     color: #29ABE2;
     font-size: 30px;
     font-weight: 600;
     padding: 50px 0px;
 }
 
-.dashboard-menu li{
+.dashboard-menu li {
     background-color: #29ABE2;
     color: white;
     padding: 10px;
@@ -26,8 +26,33 @@
     border-radius: 8px;
 }
 
-@media only screen and (max-width: 780px){
-    .dashboard-menu{
-        display: none;
+.dashboard-desatived-menu {
+    display: none;
+}
+
+.dashboard-hamburger {
+    display: none;
+}
+
+@media only screen and (max-width: 780px) {
+    .dashboard-hamburger {
+        display:block;
+        width: 10vw;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        margin: 10px;
+    }
+    .dashboard-menu {
+        top: 0;
+        left: 0;
+        background-color: white;
+        position: fixed;
+        width: 50vw;
+        height: 100%;
+        min-height: 100vh;
+        padding: 15px;
+        box-shadow: -1px 0px 15px 5px #00000032;
     }
 }
